# food-order-platform

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  main.py  project-rules.md  pyproject.toml  requirements.txt  start-demo.cmd  start-mac.sh
backend/: Dockerfile  docker-entrypoint.sh
backend/api/: admin.py  apps.py  exceptions.py  models.py  responses.py  serializers.py  services.py  urls.py  views.py
backend/api/fixtures/: demo_data.json
backend/api/migrations/: 0001_initial.py
backend/config/: settings.py  urls.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  api.js  main.js  styles.css
frontend/src/components/: AdminWorkspace.vue  CustomerWorkspace.vue  LoginPage.vue  ProductSpecModal.vue
