[project]
name = "food-order-platform"
version = "0.1.0"
description = "基于 Django + Vue + SQLite 的在线点餐平台"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "Django>=5.2,<6.0",
    "djangorestframework>=3.16,<4.0",
    "django-cors-headers>=4.7,<5.0",
    "django-filter>=25.1,<26.0",
    "python-dotenv>=1.1,<2.0",
    "Pillow>=11.0,<12.0",
    "drf-spectacular>=0.28,<1.0",
    "gunicorn>=23.0,<24.0",
]
[dependency-groups]
dev = [
    "pip>=26.0",
    "setuptools>=82.0",
    "wheel>=0.47",
]
